tests/Unit/PHPStan/Rules/Naming/Fixtures/TypeSuffixMismatch/Valid/EdgeCases/InlineVarAnnotation/ContainerInterface.php
<?php

declare(strict_types=1);

namespace TypeSuffixMismatchFixtures\Valid\EdgeCases\InlineVarAnnotation;

interface ContainerInterface {}
