tests/Unit/PHPStan/Rules/Naming/Fixtures/TypeSuffixMismatch/Invalid/DenyListRegression/DenyListedInterface.php
<?php

declare(strict_types=1);

namespace TypeSuffixMismatchFixtures\Invalid\DenyListRegression;

interface DenyListedInterface {}
